// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportView expect to redirect because error 1`] = `
<withRouter(ReportViewPage)
  report={
    Object {
      "id": 36,
      "inserted": 254112,
      "lastUpdate": 254112,
      "payloadName": "file1.json",
      "reportDescription": "My report description",
      "reportName": "My report name",
      "status": "CREATED",
    }
  }
  reportFetchStatus={
    Object {
      "error": null,
      "status": "none",
    }
  }
>
  <Switch>
    <Route
      component={[Function]}
      key="0"
      path="/reports/1/initialSavingsEstimation"
    />
    <Route
      component={[Function]}
      key="1"
      path="/reports/1/workloadMigrationSummary"
    />
    <Route
      component={[Function]}
      key="2"
      path="/reports/1/workloadInventory"
    />
    <Redirect
      from="/reports/1"
      push={false}
      to="/reports/1/initialSavingsEstimation"
    />
  </Switch>
</withRouter(ReportViewPage)>
`;

exports[`ReportView expect to redirect because no reportId 1`] = `
<withRouter(ReportViewPage)
  report={
    Object {
      "id": 36,
      "inserted": 254112,
      "lastUpdate": 254112,
      "payloadName": "file1.json",
      "reportDescription": "My report description",
      "reportName": "My report name",
      "status": "CREATED",
    }
  }
  reportFetchStatus={
    Object {
      "error": null,
      "status": "none",
    }
  }
>
  <Switch>
    <Route
      component={[Function]}
      key="0"
      path="undefined/initialSavingsEstimation"
    />
    <Route
      component={[Function]}
      key="1"
      path="undefined/workloadMigrationSummary"
    />
    <Route
      component={[Function]}
      key="2"
      path="undefined/workloadInventory"
    />
    <Redirect
      from="undefined"
      push={false}
      to="undefined/initialSavingsEstimation"
    />
  </Switch>
</withRouter(ReportViewPage)>
`;

exports[`ReportView expect to render loading object 1`] = `
<withRouter(ReportViewPage)
  report={
    Object {
      "id": 36,
      "inserted": 254112,
      "lastUpdate": 254112,
      "payloadName": "file1.json",
      "reportDescription": "My report description",
      "reportName": "My report name",
      "status": "CREATED",
    }
  }
  reportFetchStatus={
    Object {
      "error": null,
      "status": "none",
    }
  }
>
  <Switch>
    <Route
      component={[Function]}
      key="0"
      path="/reports/1/initialSavingsEstimation"
    />
    <Route
      component={[Function]}
      key="1"
      path="/reports/1/workloadMigrationSummary"
    />
    <Route
      component={[Function]}
      key="2"
      path="/reports/1/workloadInventory"
    />
    <Redirect
      from="/reports/1"
      push={false}
      to="/reports/1/initialSavingsEstimation"
    />
  </Switch>
</withRouter(ReportViewPage)>
`;

exports[`ReportView expect to render object 1`] = `
<withRouter(ReportViewPage)
  report={
    Object {
      "id": 36,
      "inserted": 254112,
      "lastUpdate": 254112,
      "payloadName": "file1.json",
      "reportDescription": "My report description",
      "reportName": "My report name",
      "status": "CREATED",
    }
  }
  reportFetchStatus={
    Object {
      "error": null,
      "status": "none",
    }
  }
>
  <Switch>
    <Route
      component={[Function]}
      key="0"
      path="/reports/1/initialSavingsEstimation"
    />
    <Route
      component={[Function]}
      key="1"
      path="/reports/1/workloadMigrationSummary"
    />
    <Route
      component={[Function]}
      key="2"
      path="/reports/1/workloadInventory"
    />
    <Redirect
      from="/reports/1"
      push={false}
      to="/reports/1/initialSavingsEstimation"
    />
  </Switch>
</withRouter(ReportViewPage)>
`;
